# spandan

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PHASE2.md  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
ai/: Dockerfile  README_TRAINING.md  pyproject.toml
ai/configs/: config.yaml
ai/configs/data/: spandan.yaml
ai/configs/model/: yolov8.yaml
ai/configs/train/: default.yaml
ai/spandan_ai/: __init__.py  config.py  evaluate.py  export.py  logging.py  train.py
ai/spandan_ai/data/: __init__.py  datasets.py  prepare.py
ai/spandan_ai/health/: __init__.py  forecast.py  shi.py
ai/spandan_ai/models/: __init__.py  base.py  demo.py  registry.py  yolo.py
ai/spandan_ai/service/: __init__.py  app.py  schemas.py
ai/tests/: test_forecast.py  test_foundation.py  test_registry.py  test_service.py  test_shi.py
backend/: Dockerfile  env.example  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
backend/e2e/: pipeline.spec.ts  smoke.sh
backend/migrations/: 0001_init.sql
backend/scripts/: seed.ts
backend/src/: main.ts  worker.ts
backend/src/clients/: modelServiceClient.ts
backend/src/config/: env.ts
backend/src/domain/: asset.ts  defect.ts  health.ts  observation.ts  user.ts
backend/src/http/: asyncHandler.ts  errors.ts  types.ts
backend/src/infrastructure/: db.ts  logger.ts  migrate.ts  queue.ts  redis.ts  storage.ts
backend/src/repositories/: assetRepository.ts  auditRepository.ts  defectRepository.ts  healthRepository.ts  observationRepository.ts  userRepository.ts
backend/src/security/: password.test.ts  password.ts  token.ts
backend/src/services/: authService.ts  forecastService.test.ts  forecastService.ts  inferenceService.test.ts  inferenceService.ts  observationService.ts  passportService.ts  riskService.test.ts  riskService.ts  severity.ts
backend/tests/unit/: env.test.ts
frontend/: .dockerignore  .env.local  .gitignore  .gitkeep  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/.next/: trace
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  (+13 more)
notebooks/: spandan_train_colab.ipynb
(+33 files in other folders)
