[project]
name = "spandan-ai"
version = "0.1.0"
requires-python = ">=3.11"
# Core (Phase 1) deps. The SHI engine, forecasting, and model registry are
# pure-Python and run on just these. Heavy ML libs live in the [ml]/[service]
# extras and are only needed for training, inference, and export.
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.11"]
# Phase 2 (ML): training, segmentation, dataset conversion, export.
ml = [
  "ultralytics>=8.2",
  "torch>=2.2",
  "torchvision>=0.17",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "albumentations>=1.4",
  "opencv-python-headless>=4.10",
  "numpy>=1.26",
  "hydra-core>=1.3",
  "mlflow>=2.14",
]
# Phase 2 (model service): FastAPI inference API.
service = ["fastapi>=0.111", "uvicorn>=0.30", "python-multipart>=0.0.9", "requests>=2.32"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spandan_ai*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
# assert is the idiomatic way to write pytest tests; S101 is a false positive here.
"tests/*" = ["S101"]
# FastAPI uses callables in argument defaults (Depends/File) by design.
"spandan_ai/service/app.py" = ["B008"]
# Dataset adapters parse trusted, locally-downloaded research datasets.
"spandan_ai/data/datasets.py" = ["S314", "S320"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

# Integration modules wrap untyped ML SDKs; we type-check our own logic strictly
# (engine, registry, schemas, config) and don't fight third-party stubs here.
[[tool.mypy.overrides]]
module = [
  "spandan_ai.data.datasets",
  "spandan_ai.models.yolo",
  "spandan_ai.train",
  "spandan_ai.evaluate",
  "spandan_ai.export",
  "spandan_ai.service.app",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "ultralytics.*", "cv2.*", "numpy.*", "torch.*", "torchvision.*",
  "onnx.*", "onnxruntime.*", "albumentations.*", "mlflow.*",
  "hydra.*", "omegaconf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=spandan_ai"
testpaths = ["tests"]
